--- a/lib/api_web/templates/layout/app.html.eex
+++ b/lib/api_web/templates/layout/app.html.eex
@@ -16,10 +16,10 @@
       <header class="header">
         <nav role="navigation">
           <ul class="nav nav-pills pull-right">
-            <li><a href="http://www.phoenixframework.org/docs">Get Started</a></li>
+            <li>By Ryan and Brian</li>
           </ul>
         </nav>
-        <span class="logo"></span>
+        <span class="nn-header"><strong>Neural</strong> Nets</span>
       </header>
 
       <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
